# ChangeLog for dev-python/requests
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*requests-0.7.3 (26 Oct 2011)

  26 Oct 2011; James Rowe <jnrowe@gmail.com> +requests-0.7.3.ebuild,
  +files/requests-0.7.3-fix_poster_bundling.patch:
  Version bump [491].

*requests-0.6.6 (25 Oct 2011)

  25 Oct 2011; James Rowe <jnrowe@gmail.com> +requests-0.6.6.ebuild,
  +files/requests-0.6.6-fix_poster_bundling.patch:
  Version bump [484].

  17 Oct 2011; James Rowe <jnrowe@gmail.com>
  files/requests-0.6.1-fix_poster_bundling.patch:
  Added patch description.

  25 Sep 2011; James Rowe <jnrowe@gmail.com> requests-0.6.1.ebuild:
  Keyworded x86.

  25 Sep 2011; James Rowe <jnrowe@gmail.com> requests-0.6.1.ebuild:
  Keyworded amd64.

  26 Aug 2011; James Rowe <jnrowe@gmail.com> requests-0.6.1.ebuild:
  Keyworded ~x86.

  26 Aug 2011; James Rowe <jnrowe@gmail.com> requests-0.6.1.ebuild,
  files/requests-0.6.1-fix_poster_bundling.patch:
  Fixed handling of external poster dependency.

*requests-0.6.1 (24 Aug 2011)

  24 Aug 2011; James Rowe <jnrowe@gmail.com> +requests-0.6.1.ebuild,
  +files/requests-0.6.1-fix_poster_bundling.patch, +metadata.xml, +watch:
  Initial ebuild, by me [459].
