@@ -2,12 +2,11 @@
 Hash: SHA512
 
 DIST requests-0.6.1.tar.gz 26107 RMD160 763f5c05fe7d161ea5564836fb3a0b1a9832ee9b SHA1 fdd42fdc5f3b83c260229f07ea3823efb727a5b2 SHA256 2656b23db25398e990e6f5d75dfbd960454a1fe573aeedc651773ddd2a8a3bbc
-DIST requests-0.6.6.tar.gz 30809 RMD160 1213ea1487c2df939022bb350722a2ae950c5371 SHA1 c76d2b91ecdf5f44960dd32ce581957aa5edb555 SHA256 6670aee5fe3bb545e1f7e8bb073a06be65344b467cd698b0ad58e7d7792dc2bb
 DIST requests-0.7.3.tar.gz 31805 RMD160 51a5a679087f504f04ab92016125dbe43616de8d SHA1 5060678e520eeea5d234f8cfbad9b50ca333fdd7 SHA256 2e7a0cb6251da5dd8c185f5d404e110d29e47afec7c8e60d78806436360a40d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7ApgUACgkQzJrj3cAXR0m/4wCgqpqK3CZLKx9zWb891SAv0c1J
-tysAmwcihbx83KikoZf7gbPbMJVW0rEl
-=czUH
+iEYEAREKAAYFAk7P6WsACgkQzJrj3cAXR0mCwwCeIfUXbzugNpggy/LDEE5ZSQ+G
+sXoAn289zKMeQ2VQFRBH0Y7R/q4+AOu/
+=cU6n
 -----END PGP SIGNATURE-----
