@@ -442,7 +442,6 @@
  * Versions:
 
   * `0.6.1 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/requests/requests-0.6.1.ebuild>`__  ``amd64``, ``x86``
-  * `0.6.6 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/requests/requests-0.6.6.ebuild>`__  ``~amd64`` (due 2011-12-24), ``~x86`` (due 2011-12-24)
   * `0.7.3 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/requests/requests-0.7.3.ebuild>`__  ``~amd64`` (due 2011-12-25), ``~x86`` (due 2011-12-25)
 
 * ``rstctl`` - http://pypi.python.org/pypi/rstctl/
