@@ -3,9 +3,7 @@ REM 2011-12-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-vcs/gitflow-0.4.1-r2
 REM 2011-12-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/attest-0.5.2 %a
 REM 2011-12-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/seqdiag-0.5.0 %a
 REM 2011-12-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/gevent-0.13.6 %a
-REM 2011-12-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/requests-0.6.6 %a
 REM 2011-12-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/gevent-0.13.6 %a
-REM 2011-12-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/requests-0.6.6 %a
 REM 2011-12-25 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 app-misc/hammertime-0.1.4 %a
 REM 2011-12-25 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 app-misc/hammertime-0.1.4 %a
 REM 2011-12-25 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/requests-0.7.3 %a
