@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Nov 2011; James Rowe <jnrowe@gmail.com> -requests-0.6.6.ebuild:
+  Removed stale ebuild, 0.7.3 is eligible for stabilisation before 0.6.6 will
+  be eligible again.
+
   14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
   Removed redundant herd info.
 
